fai, speed/distance/time competitions, wind cancellation

--- a/app/assets/stylesheets/events/show.css.scss
+++ b/app/assets/stylesheets/events/show.css.scss
@@ -1,6 +1,8 @@
 #results-table {
 
   .points-cell,
+  .points-cell .dotted-underline,
+  .result-cell s,
   .competitor-suit {
     color: rgb(153, 153, 153);
   }
