--- a/app/views/tournaments/matches/show.html.erb
+++ b/app/views/tournaments/matches/show.html.erb
@@ -14,6 +14,6 @@
   </p>
 
 
-  <%= link_to 'Edit', edit_tournament_match_path(@tournament_match) %> |
+  <%= link_to 'Edit', edit_tournament_match_path(@tournament, @tournament_match) %> |
   <%= link_to 'Back', tournament_matches_path %>
 </div>
