--- a/app/views/tournaments/rounds/show.html.erb
+++ b/app/views/tournaments/rounds/show.html.erb
@@ -5,5 +5,5 @@
   <%= @tournament_round.order %>
 </p>
 
-<%= link_to 'Edit', edit_tournament_round_path(@tournament_round) %> |
+<%= link_to 'Edit', edit_tournament_round_path(@tournament, @tournament_round) %> |
 <%= link_to 'Back', tournament_rounds_path %>
