--- a/app/views/events/competitors/_competitor_cells.html.haml
+++ b/app/views/events/competitors/_competitor_cells.html.haml
@@ -9,10 +9,14 @@
       = button_to event_competitor_path(@event, competitor), 
                   method: :delete, 
                   remote: true, 
+                  params: {'display_raw_results' => @display_raw_results},
                   class: 'delete-competitor btn-link' do
         %i.fa.fa-times
 
-      = link_to edit_event_competitor_path(@event, competitor), remote: true, class: 'edit-competitor btn-primary' do
+      = link_to edit_event_competitor_path(@event, competitor), 
+                remote: true,
+                'data-params': { 'display_raw_results' => @display_raw_results }.to_param,
+                class: 'edit-competitor btn-primary' do
         %i.fa.fa-pencil
 
 %td.text-center.text-muted
