--- a/app/views/events/update_scoreboard.js.erb
+++ b/app/views/events/update_scoreboard.js.erb
@@ -1,3 +1,3 @@
 $('#modal').modal('hide');
-$('#results-table').replaceWith("<%= j render('events/scoreboards/scoreboard_sdt') %>");
+$('#results-table').replaceWith("<%= j render(@scoreboard.template) %>");
 enable_tooltips();
