Fixed bug in best results calculation

--- a/app/views/tracks/results/_index_modal.html.haml
+++ b/app/views/tracks/results/_index_modal.html.haml
@@ -51,8 +51,8 @@
         %h3= t('tracks.show.online_comp_results')
         - @track.virtual_comp_results.each do |result|
           .track-online-result
-            %a{href: virtual_competition_path(result.virtual_competition)}
-              = competition_title(result.virtual_competition)
+            - competition = result.virtual_competition
+            %a{href: virtual_competition_path(competition)}
+              = competition_title(competition)
             %span
-              = ': ' 
-              = result.result.to_s
+              = ": #{format_result(result.result, competition)} #{competition_unit(competition)}"
