--- a/app/views/sponsors/_sponsor.html.haml
+++ b/app/views/sponsors/_sponsor.html.haml
@@ -1,4 +1,4 @@
-.col-md-3.col-sm-3.text-center.sponsor
+.col-md-3.col-sm-3.text-center.sponsor{id: "#{dom_id(sponsor)}"}
   %a{href: sponsor.website}
     %img.img-responsive{src: sponsor.logo.url(:medium), 'data-toggle' => 'tooltip', title: sponsor.name}
   - if can? :delete, sponsor
