Sorting and Finished events locking
- No show controls
- refresh page if status changed
- sorting competitors by total desc, results count desc, avg result
desc, name asc

--- a/app/assets/stylesheets/events/show.css.scss
+++ b/app/assets/stylesheets/events/show.css.scss
@@ -85,6 +85,11 @@
     }
   }
 
+  .competitor-row:hover .counted-result {
+    color: #00BA02;
+    text-decoration: underline;
+  }
+
   td.competitor-cell {
     span.competitor-controls {
       position: absolute;
