--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -24,7 +24,7 @@
 
   .row{class: ('top-buffer' if can_manage)}
     .col-md-7.col-sm-7
-      - if can_manage
+      - if can_manage && !@event.finished?
         = link_to new_event_section_path(event_id: @event.id), 
                   remote: true, 
                   'data-params': { 'display_raw_results' => @display_raw_results }.to_param,
@@ -144,7 +144,7 @@
             = @event.responsible.name
         - @event.event_organizers.each do |event_organizer|
           = render 'events/event_organizers/event_organizer', event_organizer: event_organizer
-      - if can_manage
+      - if can_manage && !@event.finished?
         = link_to new_event_event_organizer_path(@event), remote: true, class: 'add-organizer' do
           %i.fa.fa-plus
           = t('.add_judge')
