--- a/app/views/tracks/_new_track.html.haml
+++ b/app/views/tracks/_new_track.html.haml
@@ -26,13 +26,23 @@
                                  nil, 
                                  class: 'form-control', 
                                  placeholder: t('static_pages.index.track_form.name_plh'), 
-                                 type: 'text'
+                                 type: 'text',
+                                 value: recent_value(:name)
 
           .form-group
             = label_tag :suit, t('static_pages.index.track_form.suit'), class: 'col-sm-3 control-label'
             .col-sm-9
-              %select.new-track-wingsuit-select.suit-group{name: 'track[wingsuit_id]'}
-              %input.form-control.suit-group{name: 'track[suit]', type: 'text', placeholder: t('tracks.form.suit_text_placeholder')}
+              - recent_suit_id = recent_value(:suit_id)
+              - recent_suit_name = recent_value(:suit_name)
+              %select.new-track-wingsuit-select.suit-group{name: 'track[wingsuit_id]',
+                                                           style: ('display:none' if (!recent_suit_id && recent_suit_name))}
+                - if recent_suit_id
+                  %option{value: recent_suit_id}= Wingsuit.find(recent_suit_id).name
+              %input.form-control.suit-group{name: 'track[suit]',
+                                             type: 'text',
+                                             placeholder: t('tracks.form.suit_text_placeholder'),
+                                             value: recent_suit_name,
+                                             style: ('display:none' if (recent_suit_id || !recent_suit_name))}
             .col-sm-9.col-sm-offset-3
               %span
                 %span.toggle-suit-caption= t('tracks.form.toggle_suit_caption')
@@ -45,15 +55,17 @@
                                nil, 
                                class: 'form-control', 
                                placeholder: t('static_pages.index.track_form.location_plh'), 
-                               type: 'text'
+                               type: 'text',
+                               value: recent_value(:location) 
 
           .form-group
             = label_tag :kind, t('static_pages.index.track_form.kind'), class: 'col-sm-3 control-label'
             .btn-group.col-sm-9{data: {toggle: 'buttons'}}
-              %label.btn.btn-default.active
+              - recent_activity = recent_value(:activity)
+              %label.btn.btn-default{class: ('active' if (recent_activity == 'skydive' || recent_activity.nil?))}
                 = radio_button_tag 'track[kind]', 'skydive', true
                 = 'Skydive'
-              %label.btn.btn-default
+              %label.btn.btn-default{class: ('active' if recent_value(:activity) == 'base')}
                 = radio_button_tag 'track[kind]', 'base'
                 = 'B.A.S.E'
 
@@ -83,3 +95,7 @@
         .modal-footer
           = submit_tag t('static_pages.index.track_form.submit'), class: 'btn btn-success'
           %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}=t('general.cancel')
+
+- content_for :page_js do
+  :javascript
+    new Skyderby.views.NewTrackForm({el: '#newTrackModal'});
