--- a/app/views/events/scoreboards/_speed_distance_time.html.haml
+++ b/app/views/events/scoreboards/_speed_distance_time.html.haml
@@ -1,4 +1,5 @@
 - cache ['scoreboard',
+         I18n.locale,
          @event, 
          (@display_raw_results ? 'raw' : ''), 
          (can? :update, @event)] do
